# FRTPhase

./: .gitignore  CMakeLists.txt  README.md  github  github.pub
ExampleFiles/IsoSurfaceFiles/NewbySchwemmer/: AntirotatingD05_IsoSurfacePair.h5  AntirotatingD05_IsoSurfaces.h5
ExampleFiles/SimData/NewbySchwemmer/: AntirotatingD05_CorrFile.h5  AntirotatingD05_FRTFile.h5  AntirotatingD05_TbarFile.h5
ExampleFiles/configs/: config_correlation.json  config_mean_period.json  config_verification.json
Experiments/: CMakeLists.txt
Experiments/IsoSurfaceCorrelation/: SerialCorrelation.cpp
Experiments/IsoSurfaceVerification/: IsoSurfaceVerification.cpp
Experiments/MeanPeriodVerification/: CMakeLists.txt  MeanPeriodVerification.cpp
MRTPhaseSimulation/: .gitignore  CMakeLists.txt
MRTPhaseSimulation/Experiments/: CMakeLists.txt
MRTPhaseSimulation/Experiments/IsoSurfaceCorrelation/: CMakeLists.txt  SerialCorrelation.cpp
MRTPhaseSimulation/Experiments/IsoSurfaceVerification/: CMakeLists.txt  NewbySchwemmer.cpp
MRTPhaseSimulation/PyTools/: Exceptions.py  SPhaseFile.py  Tests.py  createIsoSurfacePairs.py
MRTPhaseSimulation/PyTools/Toolbox/: ItoIsoSurfaces.py  ModelZoo.py  SPhaseFile.py  Tests.py  __init__.py
MRTPhaseSimulation/SOscFile/: CMakeLists.txt
MRTPhaseSimulation/SOscFile/include/SOscFile/: SOscFile.h
MRTPhaseSimulation/SOscFile/src/SOscFile/: Isochron.cpp  Isochron.h  Isochrone.cpp  Isochrone.h  IsochroneSet.cpp  IsochroneSet.h  MFPTSet.cpp  MFPTSet.h  MFPTs.cpp  Trajectory.cpp  Trajectory.h  TrajectorySet.cpp
MRTPhaseSimulation/SOscModels/: CMakeLists.txt
MRTPhaseSimulation/SOscModels/include/SOscModels/: SOscModels.h
MRTPhaseSimulation/SOscModels/src/SOscModels/: Domain.cpp  IsoPlanarSOsc.cpp  IsoPlanarSOsc.h  ModelFactory.h  NewSOsc.h  Solver.cpp  Solver.h
MRTPhaseSimulation/VerifyIsochrones/: CMakeLists.txt
MRTPhaseSimulation/VerifyIsochrones/src/VerifyIsochrones/: Adapters.h  SimConfig_t.cpp  SimConfig_t.h  main.cpp
MRTPhaseSimulation/libMPIFunctions/include/libMPIFunctions/: libMPIFunctions.h
MRTPhaseSimulation/libMPIFunctions/src/libMPIFunctions/: MPIFRTDetectorMPIFunctions.cpp  MPIIsoSurfaceFile.cpp  MPIIsoSurfaceFile.h  MPISimConfig.cpp  MPISimConfig.h
MRTPhaseSimulation/libMPIFunctions/tests/: libMPIFunctions.test.cpp
MRTPhaseSimulation/libSDEToolbox/include/libSDEToolbox/: libSDEToolbox.h
MRTPhaseSimulation/libSDEToolbox/src/libSDEToolbox/: EquidistantSampler.cpp  EquidistantSampler.h  HeunIntegrator.cpp  HeunIntegrator.h  IsotropicPlanarSSDEAdditiveNoise.cpp  IsotropicPlanarSSDEAdditiveNoise.h  ItoEulerIntegrator.cpp  ItoEulerIntegrator.h  MPI_FRTDetector.cpp  MPI_FRTDetector.h  ModelZoo.h  ReflectiveAnnulus.h  SDEIntegrator.h
MRTPhaseSimulation/libSDEToolbox/tests/: libSDEToolbox.test.cpp
MRTPhaseSimulation/libSPhaseFile/: CMakeLists.txt
MRTPhaseSimulation/libSPhaseFile/include/libSPhaseFile/: libSPhaseFile.h
MRTPhaseSimulation/libSPhaseFile/src/libSPhaseFile/: FRTData.cpp  FRTData.h  IsoSurface.cpp  IsoSurface.h  SPhaseFile.cpp  SPhaseFile.h  SerialCorrelation.h  SimConfig.cpp  SimConfig.h  libSPhaseDefinitionsAndConstants.h
MRTPhaseSimulation/libSPhaseFile/tests/: libSPhaseFile.test.cpp
MRTPhaseSimulation/test/: CMakeLists.txt
MRTPhaseSimulation/test/SOscFile/: CMakeLists.txt  test_SOscFile.cpp
NewbySchwemmer/: .NewbySchwemmer.py.swp  .analyze.py.swp  NewbySchwemmer.py  Tbar.py  analyze.py  asyncmp_test.py
PyTools/: Tests.py  createIsoSurfacePairs.py  createIsochrons.py  createIsochronsAndSpoke.py
PyTools/Toolbox/: Domain.py  Exceptions.py  FirstPassageDetector.py  ItoIsoSurfaces.py  ModelZoo.py  SDEIntegrators.py  SPhaseFile.py  StatPDF.py
SOscFilePy/: SOscFilePy.py
SOscPyTools/: CreateIsochrones.py  NewbySchwemmerAntirotatingCompareMFPTsDts.py  NewbySchwemmerAntirotatingCompareMFPTsIsochronesAndStraightCurve.py  NewbySchwemmerAntirotatingMFPTs.py  NewbySchwemmerAntirotatingTbar.py  SOscFilePy.py  SimConfigPy.py
StuartLandau/: Analyze.py  StuartLandauSOsc.py  Test.py
configs/: config_NewbySchwemmerAntirotatingIsoSurfaceVerification.json  config_NewbySchwemmerAntirotatingSerialCorrelationCoefficients.json  config_cluster.json  config_cluster_high_noise.json  config_cluster_high_noise2.json
libMPIFunctions/: CMakeLists.txt
libMPIFunctions/src/libMPIFunctions/: MPIFRTDetectorMPIFunctions.cpp  MPIFRTDetectorMPIFunctions.h  MPIIsoSurfaceFile.cpp  MPISimConfig.h
libSDEToolbox/: CMakeLists.txt
libSDEToolbox/include/libSDEToolbox/: libSDEToolbox.h
libSDEToolbox/src/libSDEToolbox/: Domain.h  EquidistantSampler.h  HeunIntegrator.cpp  HeunIntegrator.h  IsotropicPlanarSSDE.h  IsotropicPlanarSSDEAdditiveNoise.cpp  ItoEulerIntegrator.cpp  ItoEulerIntegrator.h  MPI_FRTDetector.h  ModelFactory.cpp  ModelFactory.h  ModelZoo.h  NormalizedMoments.cpp  NormalizedMoments.h  ReflectiveAnnulus.cpp  SDEIntegrator.cpp  Sampler.h
libSDEToolbox/tests/: libSDEToolbox.test.cpp
libSPhaseFile/include/libSPhaseFile/: libSPhaseFile.h
libSPhaseFile/src/libSPhaseFile/: Exceptions.h  IsoSurface.cpp  IsoSurface.h  SerialCorrelation.cpp  SerialCorrelation.h  SimConfig.cpp  SimConfig.h  TbarData.cpp  TbarData.h  libSPhaseDefinitionsAndConstants.h
libSPhaseFile/tests/: libSPhaseFile.test.cpp
newbyschwemmer/: Adapters.cpp  Adapters.h  CMakeLists.txt  Domain.cpp  Domain.h  IsoPlanarSOsc.cpp  IsoPlanarSOsc.h  Isochrone.cpp  Isochrone.h  IsochroneSet.cpp  IsochroneSet.h  MFPTSet.cpp  MFPTSet.h  MFPTs.cpp  MFPTs.h  ModelFactory.cpp  NewSOsc.cpp  NewSOsc.h  NormMoments.cpp  NormMoments.h  SimConfig_t.cpp  TrajectorySet.h  config_thinkpad.json  main.cpp
old_NewbySchwemmer_python/: NewbySchwemmer.py
